Closed
Bug 190279
Opened 23 years ago
Closed 23 years ago
Can select <div> inside <input>?
Categories
(SeaMonkey :: Composer, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: neil, Assigned: glazou)
Details
Attachments
(1 file, 1 obsolete file)
|
2.71 KB,
patch
|
neil
:
review+
peterv
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce problem:
1. Open a new blank page to edit
2. Insert/HTML <input>
3. Edit/Select All
4. Click on the background
Expected results: <body> selected in struct toolbar
Actual results: <body><input><div> selected in struct toolbar
Additional information: Sometimes the caret appears in the input as well
| Assignee | ||
Comment 1•23 years ago
|
||
| Reporter | ||
Comment 2•23 years ago
|
||
Comment on attachment 112398 [details] [diff] [review]
fix for this bug; the caret bug (I see it too) is another issue unrelated to the struct bar and should stand in its own bug (selection problem)
glazou, I would appreciate it if you could file the selection bug because I
don't know enough about what's going wrong. But meanwhile, r=neil
Attachment #112398 -
Flags: review+
| Assignee | ||
Comment 3•23 years ago
|
||
Attachment #112398 -
Attachment is obsolete: true
| Assignee | ||
Comment 4•23 years ago
|
||
Comment on attachment 112737 [details] [diff] [review]
better patch
Neil: can you review again pls ?
Peterv: can you sr please (short fix) ?
Attachment #112737 -
Flags: superreview?(peterv)
Attachment #112737 -
Flags: review?(neil)
| Reporter | ||
Updated•23 years ago
|
Attachment #112737 -
Flags: review?(neil) → review+
Updated•23 years ago
|
Attachment #112737 -
Flags: superreview?(peterv) → superreview+
| Assignee | ||
Comment 5•23 years ago
|
||
checked in (trunk)
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•