Composer's structure toolbar was showing anonymous content; b=190279, r=Neil, sr=peterv